:iphone: Fixed overlap in top bar.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -206,13 +206,13 @@ a.btn {
 
 #profile,
 #register{
-    right: 60px;
+    right: 13vw;
 }
 
 #login,
 #logout
  {
-    right: 180px;
+    right: calc(13vw + 130px);
 }
 
 
